# openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: Coffee Machine API
-  version: 0.1.0
+  version: 0.1.1
   description: Simple coffee machine REST API.
 servers:
   - url: http://localhost:8080
@@ -63,7 +63,7 @@ paths:
       summary: Retrieve a brewed job
       parameters:
         - in: query
-          name: jobId
+          name: jobID
           schema:
             type: string
           required: true
@@ -76,7 +76,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Job'
         '400':
-          description: Missing jobId.
+          description: Missing jobID.
         '404':
           description: Job not found.
         '410':
